2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>


	* flumotion/component/consumers/httpfragstreamer/resources.py:
	Added sessions support
	* configure.ac:
	* flumotion/Makefile.am:
	* flumotion/common (added):
	* flumotion/common/__init__.py (added):
	* flumotion/common/Makefile.am (added):
	* flumotion/common/uuid.py (added):
	Add python uuid module missing in 2.4.
	Temporal solution waiting for #7386

2009-12-18  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_ts_segmenter.py (added):
	* flumotion/test/test_ts_segmenter.xml (added):
	Test the ts-segmenter.

2009-12-18  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/test_mpegts.xml (added):
	* flumotion/test/test_mpegts.py:
	Check keyframe counter, and keyframe interval.

2009-12-18  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_mpegts.py (added):
	Added simple mpegts-mux component test.
	* flumotion/test/test_component.py (deleted):
	* flumotion/test/test_hls_ring.py:
	Renamed file to match test name.

2009-12-18  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_component.py (added):
	Added test suite for the HLSRing

2009-12-17  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	Do not add duplicated fragments to the ring

2009-12-17  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	Add bandwidth attribute to the stream info in the main playlist

2009-12-17  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	Remove unused setter and make 'hostname' private

2009-12-16  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/common.py:
	* flumotion/component/consumers/httpfragstreamer/hlsring.py: