@@ -1,6 +1,14 @@
 2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 
+	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.py:
+	Subclass Request to log the request lenght and transfered data
+	* flumotion/component/consumers/httpfragstreamer/resources.py:
+	Log request duration and transfered bytes. Fix pep8
+
+2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+
 	* flumotion/component/consumers/httpfragstreamer/resources.py:
 	Added sessions support
 	* configure.ac:
